--- a/ReplaceNoTranslation.csproj
+++ b/ReplaceNoTranslation.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExcelDataReader" Version="3.6.0" />
-    <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+    <PackageReference Include="IronXL.Excel" Version="2022.7.7362" />
+    <PackageReference Include="NPOI" Version="2.5.6" />
   </ItemGroup>
 
 </Project>
